# mase-cuda

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  justfile  pyproject.toml  setup.py  tox.ini
docs/: beginner.md  dequantize.drawio  functionality.md
profile/cu/: CMakeLists.txt
profile/cu/mxint/dequantize/: CMakeLists.txt  profile_mxint8_dequantize1d.cu
src/csrc/: bind.cu
src/csrc/mxint/: dequantize.cuh  dequantize_fast.cuh  dequantize_slow.cuh
src/mase_cuda/: constants.py  utils.py
src/mase_cuda/mxint8/: __init__.py  dequantize.py  linear.py  quantize.py
src/mase_cuda/tools/: bin_repr.py  constants.py
test/cu/mxint/: CMakeLists.txt
test/cu/mxint/dequantize/: CMakeLists.txt  test_mxint8_dequantize1d.cu  test_mxint8_dequantize1d_fast.cu  test_mxint8_dequantize1d_slow.cu
test/py/mxint/dequantize/: test_compose_mxint8.py
test/py/mxint8/dequantize/: test_dequantize1d.py  test_dequantize1d_fast.py  test_dequantize1d_slow.py
test/py/mxint8/linear/: test_qlinear.py
